--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "leaflet": "^1.9.0",
-    "next": "15.0.3",
+    "next": "^15.1.2",
     "react-dom": "^18.3.1",
     "react-leaflet": "^4.2.1"
   }
